--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Ubuntu:bold"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <title>Wayne | Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
