--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,7 +32,7 @@
       type="text/css"
     />
 
-    <title>Wayne | Developer</title>
+    <title>Wayne Hong | Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
