--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- animate.css library -->
+    <link rel="stylesheet" href="animate.min.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
