--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- animate.css library -->
-    <link rel="stylesheet" href="animate.min.css" />
+    <!-- <link rel="stylesheet" href="animate.min.css" /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
