Successfully renders from data. Renders Youtube video and title, description, and list items by mapping over component to smaller components

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,7 @@
     -->
     <!-- animate.css library -->
     <!-- <link rel="stylesheet" href="animate.min.css" /> -->
+
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
@@ -32,6 +33,10 @@
       href="http://fonts.googleapis.com/css?family=Ubuntu:bold"
       rel="stylesheet"
       type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quicksand:300,500"
+      rel="stylesheet"
     />
 
     <title>Wayne Hong | Developer</title>
